--- a/docs/电控.md
+++ b/docs/电控.md
@@ -1,1 +1,15 @@
-这是电控
+stm32的点灯-初识电控
+9-29 电控软件的下载
+9-30 解决注册机被windows defender拦截导致无法安装的问题,完成软件下载
+10-1 线上收听电控培训,并自己网上搜集教程,完成点灯
+
+stm32对sg90舵机的控制
+10-2 网上学习,了解舵机的控制原理
+10-3 使用cubemx生成代码,基于stm32使得舵机周期运动
+
+麦克纳姆轮的原理学习
+10-4 综合群内文件与互联网搜索,了解其受力分析与各方向运动实现方式,其与普通轮相比直行较慢,但转向灵活,适宜狭窄地形
+
+ps2控制的学习
+10-5 初识ps2,了解其各部分功能与信号传递原理
+10-6 
