--- a/docs/电控.md
+++ b/docs/电控.md
@@ -12,4 +12,6 @@ stm32对sg90舵机的控制
 
 ps2控制的学习
 10-5 初识ps2,了解其各部分功能与信号传递原理
-10-6 
+10-6 用stlink烧录ps2(双灯版),编译错误
+10-7 使用新教程,编译成功,烧录仍有问题
+10-8 解决烧录问题,完成ps2的调试
