--- a/docs/机械.md
+++ b/docs/机械.md
@@ -1,1 +1,5 @@
-这是机械
+参照本次比赛章程手册，作为机械组负责人，我进行了我的设计，目的在于能实现结合视觉感知，使得小车能精确收集小球。
+设计思路（为什么选择机械臂）
+在设计之初，我本考虑设计一辆像网球场里的那种收集网球的滚筒式小车，但考虑到本次目标小球是刚性的，而网球是弹性的，所以放弃了这条思路，转而选择了更普适的机械臂抓取，技术难度更高，对视觉组和电控组要求更高（尽力而为）。改方案灵活性强 定位更精准。
+设计难点
+在外壳的设计中在于，本次部分零件打印出来需要支撑，可能打印后的效果和预想有一定差距，同时限于材料，零件的组装也并不容易，零件之间的运作可能会受限。解决方法的话，就是将打印后的零件进一步打磨，采用合适的组装方式
