--- a/docs/电控.md
+++ b/docs/电控.md
@@ -1,18 +1,18 @@
-# 🤖 机器人开发成长日记
 
-## 💡 第一章：与STM32的初次相遇
 
-### 🎯 任务目标
+##  第一章：与STM32的初次相遇
+
+### 任务目标
 让STM32开发板上的LED小灯成功点亮
 
-### 📅 学习历程
+### 学习历程
 | 时间   | 进展            | 状态  |
 | ---- | ------------- | --- |
-| 9.29 | 搭建开发环境，安装必备软件 | 🔧  |
-| 9.30 | 解决注册机被拦截问题    | 🛠️ |
-| 10.1 | 成功点亮LED灯      | ✅   |
+| 9.29 | 搭建开发环境，安装必备软件 |   |
+| 9.30 | 解决注册机被拦截问题    | |
+| 10.1 | 成功点亮LED灯      |   |
 
-### 🛠️ 遇到的问题与解决方案
+###  遇到的问题与解决方案
 | 问题阶段       | 遇到的问题                        | 解决方案                                     | 经验收获                |
 | ---------- | ---------------------------- | ---------------------------------------- | ------------------- |
 | ** 环境搭建 ** | Windows Defender将注册机识别为病毒病拦截 | 1、暂时关闭实时保护 2、添加文件到排除项                    | 学会处理安全软件误报，理解软件授权机制 |
